--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Alea",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^13.7.0"
+    "@types/mongodb": "^3.3.1",
+    "mongodb": "^3.3.2"
   }
 }
