package.json Problembehebung

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "(https://github.com/AleaFlesch/EIA2.git)"
+    "url": "https://github.com/AleaFlesch/EIA2.git"
   },
   "author": "Alea",
   "license": "ISC",
